# FaustaoSay

./: .gitignore  README.md  beruf.gr  earley.py  faustao.txt  faustaosay  faustaosay.py  fausto.cow  faustosay.py  generator.py  gramatica.gr  main.py  main.py~  math.gr  parser.py  pyproject.toml  teste.py  teste.txt  teste.txt~
grammars/: fausto.gr  gramatica.gr  rec.gr  teste.gr
