[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faustaosay"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
audio = ["playsound"]

[project.scripts]
faustaosay = "faustaosay:main"

[tool.hatch.build.targets.wheel]
include = [
    "faustaosay.py",
    "earley.py",
    "generator.py",
    "parser.py",
    "grammars/",
    "fausto.cow",
]
